# quotes_api

./: .gitignore  Readme.md  flake.nix  main.py  pyproject.toml  storage.py
utils/: fastapi-quotes.service  upload_quotes_from_telegram_export.py
